--- a/index.html
+++ b/index.html
@@ -19,10 +19,15 @@
     </section>
 
     <section class="main-content">
-      <h3>
-<a id="welcome-to-biston" class="anchor" href="#welcome-to-biston" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to Biston.</h3>
+      <h1>
+<a id="welcome-to-biston" class="anchor" href="#welcome-to-biston" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to Biston.</h1>
 
 <p>Biston is the third iteration in the Calliope Sentiment Parser Series (CSPS). It is open-source and freely available for use and contributions. This page is still in the early stages, but please stick around and see what we develop over the next months!</p>
+
+<h2>
+<a id="what-does-biston-do" class="anchor" href="#what-does-biston-do" aria-hidden="true"><span class="octicon octicon-link"></span></a>What does Biston do?</h2>
+
+<p>Biston uses Bayesian methods to model the polarity of Yelp reviews and estimate word sentiment. It is coupled with a machine-learning model that predicts usefullness of the text. Combining these two metrics together allows companies to quickly see points that affect customer satisfaction, plus it filters out reviews that contain little helpful information. </p>
 
 <h2>
 <a id="contributors" class="anchor" href="#contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contributors</h2>
