--- a/index.html
+++ b/index.html
@@ -20,19 +20,21 @@
 
     <section class="main-content">
       <h1>
-<a id="welcome-to-biston" class="anchor" href="#welcome-to-biston" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to Biston.</h1>
+<a id="welcome-to-biston" class="anchor" href="#welcome-to-biston" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to Biston.</h1>
 
 <p>Biston is the third iteration in the Calliope Sentiment Parser Series (CSPS). It is open-source and freely available for use and contributions. This page is still in the early stages, but please stick around and see what we develop over the next months!</p>
 
 <h2>
-<a id="what-does-biston-do" class="anchor" href="#what-does-biston-do" aria-hidden="true"><span class="octicon octicon-link"></span></a>What does Biston do?</h2>
+<a id="what-does-biston-do" class="anchor" href="#what-does-biston-do" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>What does Biston do?</h2>
 
 <p>Biston uses Bayesian methods to model the polarity of Yelp reviews and estimate word sentiment. It is coupled with a machine-learning model that predicts usefullness of the text. Combining these two metrics together allows companies to quickly see points that affect customer satisfaction, plus it filters out reviews that contain little helpful information. </p>
 
 <h2>
-<a id="contributors" class="anchor" href="#contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contributors</h2>
+<a id="contributors" class="anchor" href="#contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Contributors</h2>
 
 <p>This project is the work of Brigham Young University, done as coursework for the Natural Language Processing course (LING581). You can contact us at <a href="mailto:thyer@byu.edu">thyer@byu.edu</a> or through GitHub. </p>
+
+<p><a href="https://github.com/thyer/biston/raw/master/581-Final%20Report.pdf">Intro.pdf</a></p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/thyer/biston">Biston</a> is maintained by <a href="https://github.com/thyer">thyer</a>.</span>
