Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -1,55 +1,67 @@
 <!DOCTYPE html>
 <html>
+
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <meta name="description" content="Biston : Calliope-class sentiment parser with built-in usefulness metrics">
 
-    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/github-dark.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Biston by thyer</title>
+    <title>Biston</title>
   </head>
 
   <body>
 
-    <header>
-      <div class="container">
-        <h1>Biston</h1>
-        <h2>Calliope-class sentiment parser with built-in usefulness metrics</h2>
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/thyer/biston">View on GitHub</a>
 
-        <section id="downloads">
-          <a href="https://github.com/thyer/biston/zipball/master" class="btn">Download as .zip</a>
-          <a href="https://github.com/thyer/biston/tarball/master" class="btn">Download as .tar.gz</a>
-          <a href="https://github.com/thyer/biston" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
-        </section>
-      </div>
-    </header>
+          <h1 id="project_title">Biston</h1>
+          <h2 id="project_tagline">Calliope-class sentiment parser with built-in usefulness metrics</h2>
 
-    <div class="container">
-      <section id="main_content">
-        <h1>
-<a id="welcome-to-biston" class="anchor" href="#welcome-to-biston" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to Biston.</h1>
+            <section id="downloads">
+              <a class="zip_download_link" href="https://github.com/thyer/biston/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/thyer/biston/tarball/master">Download this project as a tar.gz file</a>
+            </section>
+        </header>
+    </div>
+
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
+        <h2>
+<a id="welcome-to-biston" class="anchor" href="#welcome-to-biston" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to Biston.</h2>
 
 <p>Biston is the third iteration in the Calliope Sentiment Parser Series (CSPS). It is open-source and freely available for use and contributions. Development was put on hold in January 2016 until further interest develops. </p>
 
-<h2>
-<a id="what-does-biston-do" class="anchor" href="#what-does-biston-do" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>What does Biston do?</h2>
+<h3>
+<a id="publication" class="anchor" href="#publication" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Publication</h3>
+
+<p>Feel free to download our report here: <a href="https://github.com/thyer/biston/raw/master/581-Final%20Report.pdf">Biston report</a></p>
+
+<h3>
+<a id="what-does-biston-do" class="anchor" href="#what-does-biston-do" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>What does Biston do?</h3>
 
 <p>Biston uses Bayesian methods to model the polarity of Yelp reviews and estimate word sentiment. It is coupled with a machine-learning model that predicts usefullness of the text. Combining these two metrics together allows companies to quickly see points that affect customer satisfaction, plus it filters out reviews that contain little helpful information. </p>
 
-<h2>
-<a id="contributors" class="anchor" href="#contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Contributors</h2>
+<h3>
+<a id="contributors" class="anchor" href="#contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Contributors</h3>
 
 <p>This project is the work of Brigham Young University, done as coursework for the Natural Language Processing course (LING581). You can contact us at <a href="mailto:thyer@byu.edu">thyer@byu.edu</a> or through GitHub. </p>
-
-<h2>
-<a id="publication" class="anchor" href="#publication" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Publication</h2>
-
-<p>Feel free to download our report here: <a href="https://github.com/thyer/biston/raw/master/581-Final%20Report.pdf">Biston report</a></p>
       </section>
     </div>
 
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p class="copyright">Biston maintained by <a href="https://github.com/thyer">thyer</a></p>
+        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
+      </footer>
+    </div>
+
     
+
   </body>
 </html>
